--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,36 @@ src/truffle_abis/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# React build
+dist/
+coverage/
+
+# Tailwind JIT cache
+.tailwind/
+
+# IDE 설정
+.vscode/
+.idea/
+
+# MacOS, Linux, Windows
+*.swp
+*.swo
+*.bak
+*.tmp
+Thumbs.db
+
+# Truffle / Hardhat artifacts
+artifacts/
+cache/
+typechain/
+*.tsbuildinfo
+
+# NVM
+.nvmrc
+
+# 기타 환경
+.env.local
+.env.production
+.env.development
+.env.test
