--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "babel-preset-es2015": "6.24.1",
     "bootstrap": "4.3.1",
     "chai": "4.2.0",
