--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "c-money",
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
